objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Alert_Sent_Status__c</fullName>
        <description>RS Alert app field showing status of sms alert.</description>
        <label>Alert Sent Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_To_Role__c</fullName>
        <formula>Owner:User.UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned To: Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Broker_Company_Name__c</fullName>
        <label>Broker Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Broker_Email__c</fullName>
        <label>Broker Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Broker_Name__c</fullName>
        <label>Broker Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Broker_Phone__c</fullName>
        <label>Broker Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Building__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User can select the building record while scheduling meeting with clients.</description>
        <inlineHelpText>User can select the building record while scheduling meeting with clients.</inlineHelpText>
        <label>Building</label>
        <referenceTo>Building__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Call_Hour__c</fullName>
        <formula>VALUE(MID(TEXT(CreatedDate - 4/24),12,2))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Call Hour</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Company_Size__c</fullName>
        <label>Company Size</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1-5</fullName>
                </value>
                <value>
                    <fullName>6-20</fullName>
                </value>
                <value>
                    <fullName>21-50</fullName>
                </value>
                <value>
                    <fullName>51-100</fullName>
                </value>
                <value>
                    <fullName>101-200</fullName>
                </value>
                <value>
                    <fullName>201+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <label>Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Broker__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contact Broker</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Copy_to_Buildings_in_same_Country__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Copy to Buildings in same Country</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Count3__c</fullName>
        <description>for reporting</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Country_Code__c</fullName>
        <label>Country Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AF</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>DZ</fullName>
                </value>
                <value>
                    <fullName>AS</fullName>
                </value>
                <value>
                    <fullName>AD</fullName>
                </value>
                <value>
                    <fullName>AO</fullName>
                </value>
                <value>
                    <fullName>AQ</fullName>
                </value>
                <value>
                    <fullName>AG</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>AW</fullName>
                </value>
                <value>
                    <fullName>AU</fullName>
                </value>
                <value>
                    <fullName>AT</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>BS</fullName>
                </value>
                <value>
                    <fullName>BH</fullName>
                </value>
                <value>
                    <fullName>BD</fullName>
                </value>
                <value>
                    <fullName>BB</fullName>
                </value>
                <value>
                    <fullName>BY</fullName>
                </value>
                <value>
                    <fullName>BE</fullName>
                </value>
                <value>
                    <fullName>BZ</fullName>
                </value>
                <value>
                    <fullName>BJ</fullName>
                </value>
                <value>
                    <fullName>BM</fullName>
                </value>
                <value>
                    <fullName>BT</fullName>
                </value>
                <value>
                    <fullName>BO</fullName>
                </value>
                <value>
                    <fullName>BA</fullName>
                </value>
                <value>
                    <fullName>BW</fullName>
                </value>
                <value>
                    <fullName>BV</fullName>
                </value>
                <value>
                    <fullName>BR</fullName>
                </value>
                <value>
                    <fullName>IO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Created_By_Role__c</fullName>
        <formula>CreatedBy.UserRole.Name</formula>
        <label>Created By: Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DB_Activity_Type__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <formula>IF(CONTAINS( Subject , "Email"), "Email", IF(CONTAINS( Subject , "Cold Call"), "Cold Call", IF(CONTAINS( Subject , "Call"), "Call", IF(CONTAINS( Subject , "Meeting"), "Meeting", IF(CONTAINS( Subject , "On Site Visit"), "Site Visit", IF(CONTAINS( Subject , "Quote"), "Send Letter/Quote", "Other"))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DB Activity Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Day_of_the_Week__c</fullName>
        <formula>MOD( DATEVALUE(CreatedDate) - DATE(1900, 1, 7), 7)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Day of the Week</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <description>This field should store the name of the Lead.</description>
        <label>First Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_touch__c</fullName>
        <defaultValue>false</defaultValue>
        <label>First touch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Forcefully_Completed_On__c</fullName>
        <label>Forcefully Completed On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Forcefully_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox is check if Task Status is forcefully updated to 'Completed' by Batch</description>
        <label>Forcefully Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <label>Industry</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Advertising</fullName>
                </value>
                <value>
                    <fullName>Art, Fashion, and Design</fullName>
                </value>
                <value>
                    <fullName>Business Consulting</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Energy</fullName>
                </value>
                <value>
                    <fullName>Event Planning</fullName>
                </value>
                <value>
                    <fullName>Financial Services and Insurance</fullName>
                </value>
                <value>
                    <fullName>Food &amp; Beverage</fullName>
                </value>
                <value>
                    <fullName>Health/Beauty/Wellness</fullName>
                </value>
                <value>
                    <fullName>Healthcare &amp; Pharmaceutical</fullName>
                </value>
                <value>
                    <fullName>Human Resources / Recruiting</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Marketing, Social Media, and/or PR</fullName>
                </value>
                <value>
                    <fullName>Media and Entertainment</fullName>
                </value>
                <value>
                    <fullName>Non-Profit/Causes</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Real Estate</fullName>
                </value>
                <value>
                    <fullName>Sports</fullName>
                </value>
                <value>
                    <fullName>Technology - E-commerce</fullName>
                </value>
                <value>
                    <fullName>Technology - IT Products and Services</fullName>
                </value>
                <value>
                    <fullName>Technology - Software/App Development</fullName>
                </value>
                <value>
                    <fullName>Technology - Web Design</fullName>
                </value>
                <value>
                    <fullName>Telecommunications</fullName>
                </value>
                <value>
                    <fullName>Transportation Services</fullName>
                </value>
                <value>
                    <fullName>Travel, Hospitality, and Lodging</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interaction__c</fullName>
        <description>Describes whether interaction with lead was inbound or outreach</description>
        <label>Multi-touch type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Inbound</fullName>
                </value>
                <value>
                    <fullName>Outbound</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interested_in_Number_of_Desks__c</fullName>
        <label>Interested in Number of Desks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_ID__c</fullName>
        <description>This field stores the Lead Id for which this task was created</description>
        <label>Lead ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Detail__c</fullName>
        <description>Used to capture historical touchpoint from lead merging</description>
        <label>Lead Source Detail</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Source__c</fullName>
        <label>Lead Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Multi_Touch_Date__c</fullName>
        <description>Used to captured original date duplicate lead was created for this touchpoint</description>
        <label>Legacy Multi-Touch_Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Legacy_Multi_touch__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Legacy Multi-touch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Locale__c</fullName>
        <label>Locale</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>af</fullName>
                </value>
                <value>
                    <fullName>af-ZA</fullName>
                </value>
                <value>
                    <fullName>sq</fullName>
                </value>
                <value>
                    <fullName>sq-AL</fullName>
                </value>
                <value>
                    <fullName>gsw-FR</fullName>
                </value>
                <value>
                    <fullName>am-ET</fullName>
                </value>
                <value>
                    <fullName>ar</fullName>
                </value>
                <value>
                    <fullName>ar-DZ</fullName>
                </value>
                <value>
                    <fullName>ar-BH</fullName>
                </value>
                <value>
                    <fullName>ar-EG</fullName>
                </value>
                <value>
                    <fullName>ar-IQ</fullName>
                </value>
                <value>
                    <fullName>ar-JO</fullName>
                </value>
                <value>
                    <fullName>ar-KW</fullName>
                </value>
                <value>
                    <fullName>ar-LB</fullName>
                </value>
                <value>
                    <fullName>ar-LY</fullName>
                </value>
                <value>
                    <fullName>ar-MA</fullName>
                </value>
                <value>
                    <fullName>ar-OM</fullName>
                </value>
                <value>
                    <fullName>ar-QA</fullName>
                </value>
                <value>
                    <fullName>ar-SA</fullName>
                </value>
                <value>
                    <fullName>ar-SY</fullName>
                </value>
                <value>
                    <fullName>ar-TN</fullName>
                </value>
                <value>
                    <fullName>ar-AE</fullName>
                </value>
                <value>
                    <fullName>ar-YE</fullName>
                </value>
                <value>
                    <fullName>hy</fullName>
                </value>
                <value>
                    <fullName>hy-AM</fullName>
                </value>
                <value>
                    <fullName>as-IN</fullName>
                </value>
                <value>
                    <fullName>az</fullName>
                </value>
                <value>
                    <fullName>az-Cyrl-AZ</fullName>
                </value>
                <value>
                    <fullName>az-Latn-AZ</fullName>
                </value>
                <value>
                    <fullName>ba-RU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Locations_Interested__c</fullName>
        <label>Locations Interested</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AMS-Labs</fullName>
                </value>
                <value>
                    <fullName>AMS-Metropool</fullName>
                </value>
                <value>
                    <fullName>AMS-Weteringschans</fullName>
                </value>
                <value>
                    <fullName>AUS-Congress</fullName>
                </value>
                <value>
                    <fullName>AUS-Labs</fullName>
                </value>
                <value>
                    <fullName>AUS-University Park</fullName>
                </value>
                <value>
                    <fullName>BEV-Be'er Sheva</fullName>
                </value>
                <value>
                    <fullName>BKN-Dumbo Heights (Prospect)</fullName>
                </value>
                <value>
                    <fullName>BKN-Brooklyn Heights</fullName>
                </value>
                <value>
                    <fullName>BKN-Dumbo Heights (Sands)</fullName>
                </value>
                <value>
                    <fullName>BKN-Williamsburg</fullName>
                </value>
                <value>
                    <fullName>BL-Hackescher Markt</fullName>
                </value>
                <value>
                    <fullName>BL-Sony Center</fullName>
                </value>
                <value>
                    <fullName>BOS-Fort Point</fullName>
                </value>
                <value>
                    <fullName>BOS-Labs</fullName>
                </value>
                <value>
                    <fullName>BOS-South Station</fullName>
                </value>
                <value>
                    <fullName>CHI-Fulton Market</fullName>
                </value>
                <value>
                    <fullName>CHI-Grant Park</fullName>
                </value>
                <value>
                    <fullName>CHI-Labs</fullName>
                </value>
                <value>
                    <fullName>CHI-River North</fullName>
                </value>
                <value>
                    <fullName>CHI-West Loop</fullName>
                </value>
                <value>
                    <fullName>DC-Chinatown</fullName>
                </value>
                <value>
                    <fullName>DC-Crystal City</fullName>
                </value>
                <value>
                    <fullName>DC-Dupont Circle</fullName>
                </value>
                <value>
                    <fullName>DC-Labs</fullName>
                </value>
                <value>
                    <fullName>DC-Wonder Bread Factory</fullName>
                </value>
                <value>
                    <fullName>DEN-LoHi</fullName>
                </value>
                <value>
                    <fullName>DEN-Union Station</fullName>
                </value>
                <value>
                    <fullName>ISR-Labs</fullName>
                </value>
                <value>
                    <fullName>LA-Fine Arts</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>I don't know</fullName>
                </value>
                <value>
                    <fullName>Multiple cities</fullName>
                </value>
                <value>
                    <fullName>Amsterdam</fullName>
                </value>
                <value>
                    <fullName>Atlanta</fullName>
                </value>
                <value>
                    <fullName>Austin</fullName>
                </value>
                <value>
                    <fullName>Be'er Sheva</fullName>
                </value>
                <value>
                    <fullName>Berkeley</fullName>
                </value>
                <value>
                    <fullName>Berlin</fullName>
                </value>
                <value>
                    <fullName>Boston</fullName>
                </value>
                <value>
                    <fullName>Chicago</fullName>
                </value>
                <value>
                    <fullName>Denver</fullName>
                </value>
                <value>
                    <fullName>Herzliya</fullName>
                </value>
                <value>
                    <fullName>Hing Kong</fullName>
                </value>
                <value>
                    <fullName>London</fullName>
                </value>
                <value>
                    <fullName>Los Angeles</fullName>
                </value>
                <value>
                    <fullName>Mexico City</fullName>
                </value>
                <value>
                    <fullName>Miami</fullName>
                </value>
                <value>
                    <fullName>Montreal</fullName>
                </value>
                <value>
                    <fullName>New York City</fullName>
                </value>
                <value>
                    <fullName>Philadelphia</fullName>
                </value>
                <value>
                    <fullName>Portland</fullName>
                </value>
                <value>
                    <fullName>San Francisco</fullName>
                </value>
                <value>
                    <fullName>San Jose</fullName>
                </value>
                <value>
                    <fullName>Seattle</fullName>
                </value>
                <value>
                    <fullName>Seoul</fullName>
                </value>
                <value>
                    <fullName>Shanghai</fullName>
                </value>
                <value>
                    <fullName>Tel Aviv</fullName>
                </value>
                <value>
                    <fullName>Wahington, D.C.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Markets_Interested__c</fullName>
        <label>Markets Interested</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Amsterdam</fullName>
                </value>
                <value>
                    <fullName>Atlanta</fullName>
                </value>
                <value>
                    <fullName>Austin</fullName>
                </value>
                <value>
                    <fullName>Be'er Sheva</fullName>
                </value>
                <value>
                    <fullName>Berkeley</fullName>
                </value>
                <value>
                    <fullName>Berlin</fullName>
                </value>
                <value>
                    <fullName>Boston</fullName>
                </value>
                <value>
                    <fullName>Brooklyn</fullName>
                </value>
                <value>
                    <fullName>Chicago</fullName>
                </value>
                <value>
                    <fullName>Denver</fullName>
                </value>
                <value>
                    <fullName>Downtown Los Angeles</fullName>
                </value>
                <value>
                    <fullName>East London</fullName>
                </value>
                <value>
                    <fullName>Herzliya</fullName>
                </value>
                <value>
                    <fullName>Hong Kong</fullName>
                </value>
                <value>
                    <fullName>India</fullName>
                </value>
                <value>
                    <fullName>London</fullName>
                </value>
                <value>
                    <fullName>Los Angeles</fullName>
                </value>
                <value>
                    <fullName>Mexico City</fullName>
                </value>
                <value>
                    <fullName>Miami</fullName>
                </value>
                <value>
                    <fullName>Montreal</fullName>
                </value>
                <value>
                    <fullName>New York City</fullName>
                </value>
                <value>
                    <fullName>Paris</fullName>
                </value>
                <value>
                    <fullName>Philadelphia</fullName>
                </value>
                <value>
                    <fullName>Portland</fullName>
                </value>
                <value>
                    <fullName>San Francisco</fullName>
                </value>
                <value>
                    <fullName>San Jose</fullName>
                </value>
                <value>
                    <fullName>Seattle</fullName>
                </value>
                <value>
                    <fullName>Seoul</fullName>
                </value>
                <value>
                    <fullName>Shanghai</fullName>
                </value>
                <value>
                    <fullName>Sydney</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NMD_Outbound_Activity__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to count NMD Outbound Activities against Leads and Contacts</description>
        <label>NMD Outbound Activity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Next_Followup_Time__c</fullName>
        <label>Next Followup Time</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Tour Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_Full_Time_Employees__c</fullName>
        <label>Number of Full Time Employees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ozonetel_Call_Duration_Minutes__c</fullName>
        <formula>FastCall__Call_Duration_In_Minutes__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ozonetel Call Duration Minutes</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ozonetel_Call_Recording__c</fullName>
        <description>This field gives the recording URL for the call</description>
        <formula>FastCall__Call_Recording__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ozonetel Call Recording</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Priority_Areas__c</fullName>
        <description>priority capability areas for Enterprise Ascend workshops</description>
        <label>Priority Area(s)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Strategy &amp; Operations</fullName>
                </value>
                <value>
                    <fullName>Financial &amp; Risk Management</fullName>
                </value>
                <value>
                    <fullName>Processes &amp; Technology</fullName>
                </value>
                <value>
                    <fullName>Workplace Experience</fullName>
                </value>
                <value>
                    <fullName>Talent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Interests__c</fullName>
        <label>Product Interests</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Wework.com Membership</fullName>
                </value>
                <value>
                    <fullName>Office Space</fullName>
                </value>
                <value>
                    <fullName>Residential Space</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Line__c</fullName>
        <label>Product_Line</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>WeWork</fullName>
                </value>
                <value>
                    <fullName>WeLive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Promo_Code__c</fullName>
        <label>Promo Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quick_Quote_Location__c</fullName>
        <externalId>true</externalId>
        <label>Quick Quote Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral_Code__c</fullName>
        <label>Referral Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referrer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referrer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Leads - Referrer</relationshipLabel>
        <relationshipName>Leads3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SalesLady_Activity_UUID__c</fullName>
        <label>SalesLady Activity UUID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salesforce_Contact__c</fullName>
        <label>Salesforce Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Saleslady_Contact_UUID__c</fullName>
        <label>Saleslady Contact UUID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Same_Day_As_Today__c</fullName>
        <formula>MOD(TODAY()-DATE(1900,1,7),7) =  Day_of_the_Week__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Same Day As Today?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Workshop_Source__c</fullName>
        <description>Workshop source for Enterprise Ascend workshops</description>
        <label>Workshop Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Our outreach</fullName>
                </value>
                <value>
                    <fullName>Organic / At their request</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>YeswareCampaignName__c</fullName>
        <label>YeswareCampaignName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>YeswareTemplateNames__c</fullName>
        <description>Yesware automatically populates this value.</description>
        <label>Yesware Template Name(s)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Yesware_Meeting__c</fullName>
        <formula>VALUE(IF(Not(IsTask), "1", "0"))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># Yesware Meeting</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Yesware_Open__c</fullName>
        <formula>VALUE(IF(BEGINS(Subject, "Message Opened:"), "1", "0"))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># Yesware Open</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Yesware_Reply__c</fullName>
        <formula>VALUE(IF(BEGINS(Subject, "Reply:"), "1", "0"))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># Yesware Reply</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Yesware_Sent__c</fullName>
        <formula>VALUE(IF(BEGINS(Subject, "Message Sent:"), "1", "0"))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># Yesware Sent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Yesware_TotalCall__c</fullName>
        <formula>VALUE(IF(BEGINS(Subject, "Call") || BEGINS(Subject, "YW Call") || BEGINS(Subject, "Connect"), "1", "0"))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># Call</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>contact_referrer_only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>contact referrer only</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>